--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^11.1.6",
+    "html-minifier": "^4.0.0",
     "rollup": "^4.18.0",
     "tslib": "^2.6.3",
     "typescript": "^5.5.2"
   },
   "dependencies": {
-    "date-fns": "^3.6.0"
+    "date-fns": "^3.6.0",
+    "html-minifier-terser": "^7.2.0"
   }
 }
