--- a/package.json
+++ b/package.json
@@ -1,26 +1,27 @@
 {
-  "name": "personal-portfolio-website",
-  "version": "1.0.0",
-  "description": "Personal portfolio website",
-  "main": "index.js",
+  "name": "my-app",
+  "private": true,
+  "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rollup --config rollup.config.js"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "check": "svelte-check --tsconfig ./tsconfig.json && tsc -p tsconfig.node.json"
   },
-  "author": "",
-  "license": "ISC",
   "devDependencies": {
-    "@rollup/plugin-node-resolve": "^15.2.3",
-    "@rollup/plugin-terser": "^0.4.4",
-    "@rollup/plugin-typescript": "^11.1.6",
-    "html-minifier": "^4.0.0",
-    "rollup": "^4.18.0",
+    "@sveltejs/vite-plugin-svelte": "^3.1.1",
+    "@tsconfig/svelte": "^5.0.4",
+    "@types/page": "^1.11.9",
+    "svelte": "^4.2.18",
+    "svelte-check": "^3.8.1",
     "tslib": "^2.6.3",
-    "typescript": "^5.5.2"
+    "typescript": "^5.2.2",
+    "vite": "^5.3.1"
   },
   "dependencies": {
     "date-fns": "^3.6.0",
-    "html-minifier-terser": "^7.2.0"
+    "page": "^1.11.6",
+    "svelte-routing": "^2.13.0"
   }
 }
